--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noscript-sfc",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -8,11 +8,14 @@
     "url": "https://github.com/xitu/noscript-sfc"
   },
   "scripts": {
+    "build": "esbuild src/index.js --bundle --outfile=index.js --minify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "akira-cn",
   "license": "MIT",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.31",
+    "esbuild": "^0.14.24",
     "eslint": "^5.16.0",
     "eslint-config-75team": "^1.0.3"
   }
