--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "noscript-sfc",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "",
   "main": "index.js",
   "repository": {
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.2.31",
     "esbuild": "^0.14.24",
-    "eslint": "^5.16.0",
-    "eslint-config-75team": "^1.0.3"
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0"
   }
 }
